<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/previous_walk"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="51dp"
        android:text="@string/prev_Walk"
        android:textAlignment="center"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/steps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/miles_word" />

    <TextView
        android:id="@+id/today"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="27dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/steps_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/steps_take"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="52dp"
        android:text="@string/totalStepsTaken"
        android:textAlignment="center"
        android:textSize="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_text"
        app:layout_constraintEnd_toStartOf="@+id/num_steps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/today" />

    <TextView
        android:id="@+id/miles_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="34dp"
        android:text="@string/mile_name"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/num_miles" />

    <TextView
        android:id="@+id/dist"
        android:layout_width="115dp"
        android:layout_height="33dp"
        android:text="@string/dist"
        android:textAlignment="center"
        android:textSize="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/steps"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 mi"
        android:textSize="27dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dist"
        app:layout_constraintStart_toStartOf="@+id/text_steps_value"></TextView>

    <TextView
        android:id="@+id/num_miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="0"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/steps_take"
        app:layout_constraintTop_toBottomOf="@+id/steps_take" />

    <TextView
        android:id="@+id/num_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:text="0"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/steps_word"
        app:layout_constraintStart_toEndOf="@+id/steps_take"
        app:layout_constraintTop_toBottomOf="@+id/today" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="145dp"
        android:text="@string/totalDist"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="76dp"
        android:layout_height="36dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="88dp"
        android:text="@string/time"
        android:textAlignment="center"
        android:textSize="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start_walk"
        app:layout_constraintStart_toStartOf="@+id/dist"
        app:layout_constraintTop_toTopOf="@+id/steps"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="00:00:00"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="@+id/text_distance_value"
        app:layout_constraintStart_toEndOf="@+id/text_distance_value"
        app:layout_constraintTop_toBottomOf="@+id/text_distance_value"></TextView>

    <TextView
        android:id="@+id/steps_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:text="@string/step"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/num_steps"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="7dp"
        android:text="@string/steps"
        android:textSize="27dp"
        app:layout_constraintBottom_toTopOf="@+id/dist"
        app:layout_constraintStart_toStartOf="@+id/previous_walk" />

    <TextView
        android:id="@+id/text_steps_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="7dp"
        android:text="0"
        android:textSize="27dp"
        app:layout_constraintBottom_toTopOf="@+id/text_distance_value"
        app:layout_constraintStart_toEndOf="@+id/dist"></TextView>

    <Button
        android:id="@+id/btn_start_walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="168dp"
        android:text="Start Walk Now"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/time"></Button>

    <Button
        android:id="@+id/btn_debug_increment_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="Take 100 Steps"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_walk"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_walk" />


</androidx.constraintlayout.widget.ConstraintLayout>
<!--    tools:showIn="@layout/activity_main"/>-->

