<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RouteDetailsPage">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="278dp"
            android:layout_height="match_parent"
            android:paddingStart="5sp"
            android:paddingEnd="15dp"
            android:text="Route Title hello my name is wolrd nad im lonely"
            android:textAlignment="textEnd"
            android:textSize="28sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/favorite" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="417dp"
        android:layout_height="79dp"
        android:layout_marginTop="12dp"
        android:shrinkColumns="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:id="@+id/start_detail_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:alpha="2"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/unnamed" />

        </TableRow>

        <TableRow
            android:id="@+id/end_detail_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/finish" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/metrics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/totalTime_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/total_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/totalTime_textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/default_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/totalDist_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/total_distance"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dist_textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/default_dist"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/metrics_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/dist_unit"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>