<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".IntentionalWalkActivity"
    tools:showIn="@layout/activity_intentional_walk">

    <TextView
        android:id="@+id/text_route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="NEW ROUTE"
        android:textSize="45dp"
        app:layout_constraintStart_toStartOf="@+id/text_current_stats_title"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/text_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="23dp"
        android:text="00:25:36"
        android:textSize="30dp"
        app:layout_constraintStart_toEndOf="@+id/text_time_title"
        app:layout_constraintTop_toBottomOf="@+id/text_current_stats_title"></TextView>

    <TextView
        android:id="@+id/text_steps_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intentional_walk_steps"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_steps_value"
        app:layout_constraintStart_toStartOf="@+id/text_time_title"></TextView>

    <TextView
        android:id="@+id/text_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intentional_walk_distance"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_distance_value"
        app:layout_constraintStart_toStartOf="@+id/text_steps_title"></TextView>

    <!--    TODO: Current is still hardcoded rn -->

    <TextView
        android:id="@+id/text_current_stats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="CURRENT STATS:"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_route_name"></TextView>

    <TextView
        android:id="@+id/text_distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="23dp"
        android:text="13.81 mi"
        android:textSize="30dp"
        app:layout_constraintStart_toEndOf="@+id/text_distance_title"
        app:layout_constraintTop_toBottomOf="@+id/text_steps_value"></TextView>

    <TextView
        android:id="@+id/text_steps_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="5000"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/text_distance_title"
        app:layout_constraintStart_toEndOf="@+id/text_distance_title"
        app:layout_constraintTop_toBottomOf="@+id/text_time_value"></TextView>

    <TextView
        android:id="@+id/text_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/intentional_walk_time"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_time_value"
        app:layout_constraintStart_toStartOf="@+id/text_current_stats_title"></TextView>

<!--    <Button-->
<!--        android:id="@+id/btn_stop_walk"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="89dp"-->
<!--        android:text="STOP"-->
<!--        android:textSize="45dp"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@+id/btn_stop_walk"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/btn_stop_walk"-->
<!--        app:layout_constraintStart_toStartOf="@+id/btn_stop_walk"></Button>-->

    <Button
        android:id="@+id/btn_stop_walk"
        android:layout_width="0dp"
        android:layout_height="89dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="61dp"
        android:text="STOP"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_distance_title"></Button>

    <Button
        android:id="@+id/debug_btn_start_walk"
        android:layout_width="272dp"
        android:layout_height="89dp"
        android:text="DEBUG Start"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="551dp"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>